--- a/packages/uiComponents/package.json
+++ b/packages/uiComponents/package.json
@@ -15,37 +15,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@capacitor/core": "^2.5.0",
     "@floating-ui/dom": "^1.0.0",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
-    "@capacitor/core": "^2.5.0",
-    "react-input-mask": "^3.0.0-alpha.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-is": "^17.0.1",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "ahooks": "^3.5.2",
-    "sass": "^1.54.3",
-    "prettier": "^2.7.1"
+    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "install": "^0.13.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "npm": "^9.6.7",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-is": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.54.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/react-is": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "@types/react-is": "^17.0.1",
-    "@types/react-input-mask": "^3.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -54,9 +56,21 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-testing-library": "^4.6.0",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
   },
+  "sideEffects": [
+    "**/*.css",
+    "**/*.less",
+    "./es/index.js",
+    "./src/index.ts",
+    "./es/global/index.js",
+    "./src/global/index.ts"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
