--- a/packages/uiComponents/package.json
+++ b/packages/uiComponents/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-is": "^17.0.1",
     "react-router": "^5.2.0",
